// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`register apis 1`] = `
Object {
  "anon_role": "anonymous",
  "created_at": "[DATE]",
  "created_by": "[peoplestamp]",
  "dbname": "my-database",
  "domain_id": "[ID]",
  "id": "[ID]",
  "owner_id": "[ID]",
  "role_name": "authenticated",
  "schemas": Array [
    "zz-03e14281-public",
  ],
  "updated_at": "[DATE]",
  "updated_by": "[peoplestamp]",
}
`;

exports[`register apis 2`] = `
Object {
  "anon_role": "administrator",
  "created_at": "[DATE]",
  "created_by": "[peoplestamp]",
  "dbname": "my-database",
  "domain_id": "[ID]",
  "id": "[ID]",
  "owner_id": "[ID]",
  "role_name": "administrator",
  "schemas": Array [
    "zz-03e14281-public",
    "zz-03e14281-private",
  ],
  "updated_at": "[DATE]",
  "updated_by": "[peoplestamp]",
}
`;

exports[`register domain 1`] = `
Object {
  "created_at": "[DATE]",
  "created_by": "[peoplestamp]",
  "domain": "lql.io",
  "id": "[ID]",
  "owner_id": "[ID]",
  "subdomain": "api",
  "updated_at": "[DATE]",
  "updated_by": "[peoplestamp]",
}
`;

exports[`register domain 2`] = `
Object {
  "created_at": "[DATE]",
  "created_by": "[peoplestamp]",
  "domain": "lql.io",
  "id": "[ID]",
  "owner_id": "[ID]",
  "subdomain": "app",
  "updated_at": "[DATE]",
  "updated_by": "[peoplestamp]",
}
`;

exports[`register domain 3`] = `
Object {
  "created_at": "[DATE]",
  "created_by": "[peoplestamp]",
  "domain": "lql.io",
  "id": "[ID]",
  "owner_id": "[ID]",
  "subdomain": "admin",
  "updated_at": "[DATE]",
  "updated_by": "[peoplestamp]",
}
`;

exports[`register modules 1`] = `
Object {
  "created_at": "[DATE]",
  "created_by": "[peoplestamp]",
  "data": Object {
    "supportEmail": "support@launchql.com",
  },
  "id": "[ID]",
  "name": "legal-emails",
  "site_id": "[ID]",
  "updated_at": "[DATE]",
  "updated_by": "[peoplestamp]",
}
`;

exports[`register modules 2`] = `
Object {
  "api_id": "[ID]",
  "created_at": "[DATE]",
  "created_by": "[peoplestamp]",
  "data": Object {
    "authenticate": "authenticate",
    "authenticate_schema": "meta_private",
  },
  "id": "[ID]",
  "name": "rls_module",
  "updated_at": "[DATE]",
  "updated_by": "[peoplestamp]",
}
`;

exports[`register modules 3`] = `
Object {
  "created_at": "[DATE]",
  "created_by": "[peoplestamp]",
  "data": Object {
    "auth_schema": "meta_public",
    "forgot_password": "forgot_password",
    "reset_password": "reset_password",
    "send_verification_email": "send_verification_email",
    "set_password": "set_password",
    "sign_in": "login",
    "sign_up": "register",
    "verify_email": "verify_email",
  },
  "id": "[ID]",
  "name": "user_auth_module",
  "site_id": "[ID]",
  "updated_at": "[DATE]",
  "updated_by": "[peoplestamp]",
}
`;

exports[`register sites 1`] = `
Object {
  "apple_touch_icon": null,
  "created_at": "[DATE]",
  "created_by": "[peoplestamp]",
  "dbname": "my-database",
  "description": "Website Description",
  "domain_id": "[ID]",
  "favicon": null,
  "id": "[ID]",
  "logo": null,
  "og_image": null,
  "owner_id": "[ID]",
  "title": "Website Title",
  "updated_at": "[DATE]",
  "updated_by": "[peoplestamp]",
}
`;

exports[`register user 1`] = `
Object {
  "access_token": "[token]",
  "access_token_expires_at": "[DATE]",
  "id": "[ID]",
  "user_id": "[ID]",
}
`;
